Made custom curved arrow. Put license info in footer

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 				</table>
 			</div>
 			<footer>
-				Loading indicator by Pau Giner at <a href="https://commons.wikimedia.org/wiki/File:Loading_indicator_circle.svg">Wikimedia Commons</a><br>
-				Curved arrow from <a href="http://cliparts.co/curved-arrow-clipart">Cliparts.co</a>
+				Released under the <a href="license">MIT License</a>.
 			</footer>
 		</main>
 		<script src="js/index.js"></script>
