More formatting to the table. Value cells are now centered.

--- a/index.html
+++ b/index.html
@@ -23,65 +23,69 @@
 			<div id="status"></div>
 			<div>
 				<table class="obligs">
-					<tr class="name">
-						<td>Name:</td>
-						<td colspan="2"><span id="first-name">N/A</span> <span id="last-name">N/A</span></td>
-					</tr>
-					<tr class="points">
-						<td>Points:</td>
-						<td colspan="2"><span id="obligpassed">0</span>/7</td>
-					</tr>
-					<tr><td colspan="3">&nbsp;</td></tr>
-					<tr>
-						<th>Oblig</th>
-						<th>Status</th>
-						<th>Points</th>
-					</tr>
-					<tr class="intro">
-						<td>Introduction Week:</td>
-						<td id="introductionweek"></td>
-						<td>1</td>
-					</tr>
-					<tr class="pact">
-						<td>PACT:</td>
-						<td id="pact"></td>
-						<td>1</td>
-					</tr>
-					<tr class="ffc">
-						<td>Freaky Friday Challenge:</td>
-						<td id="freakyfriday"></td>
-						<td>2</td>
-					</tr>
-					<tr class="sinmi">
-						<td>See It Now Make It:</td>
-						<td id="seeitnowmakeit"></td>
-						<td>1</td>
-					</tr>
-					<tr class="mmoscg">
-						<td>MMOSCG:</td>
-						<td id="mmoscg"></td>
-						<td>2</td>
-					</tr>
-					<tr class="snowball">
-						<td>Snowball Challenge:</td>
-						<td id="snowballchallenge"></td>
-						<td>2</td>
-					</tr>
-					<tr class="accessibility">
-						<td>Accessibility Challenge:</td>
-						<td id="accessibilitychallenge"></td>
-						<td>0</td>
-					</tr>
-					<tr class="innovation">
-						<td>Innovation Challenge:</td>
-						<td id="innovationcamp"></td>
-						<td>3</td>
-					</tr>
-					<tr class="tango">
-						<td>Project Tango:</td>
-						<td id="tango"></td>
-						<td>2</td>
-					</tr>
+					<thead>
+						<tr class="name">
+							<td>Name</td>
+							<td colspan="2"><span id="first-name">N/A</span> <span id="last-name">N/A</span></td>
+						</tr>
+						<tr class="points">
+							<td>Points:</td>
+							<td colspan="2"><span id="obligpassed">0</span>/7</td>
+						</tr>
+						<tr><td class="blank" colspan="3">&nbsp;</td></tr>
+						<tr class="headers">
+							<th>Oblig</th>
+							<th>Status</th>
+							<th>Points</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="intro">
+							<td>Introduction Week</td>
+							<td id="introductionweek"></td>
+							<td>1</td>
+						</tr>
+						<tr class="pact">
+							<td>PACT</td>
+							<td id="pact"></td>
+							<td>1</td>
+						</tr>
+						<tr class="ffc">
+							<td>Freaky Friday Challenge</td>
+							<td id="freakyfriday"></td>
+							<td>2</td>
+						</tr>
+						<tr class="sinmi">
+							<td>See It Now Make It</td>
+							<td id="seeitnowmakeit"></td>
+							<td>1</td>
+						</tr>
+						<tr class="mmoscg">
+							<td>MMOSCG</td>
+							<td id="mmoscg"></td>
+							<td>2</td>
+						</tr>
+						<tr class="snowball">
+							<td>Snowball Challenge</td>
+							<td id="snowballchallenge"></td>
+							<td>2</td>
+						</tr>
+						<tr class="accessibility">
+							<td>Accessibility Challenge</td>
+							<td id="accessibilitychallenge"></td>
+							<td>0</td>
+						</tr>
+						<tr class="innovation">
+							<td>Innovation Challenge</td>
+							<td id="innovationcamp"></td>
+							<td>3</td>
+						</tr>
+						<tr class="tango">
+							<td>Project Tango</td>
+							<td id="tango"></td>
+							<td>2</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
 			<footer>
